# barrel-loader

./: .gitignore  .rustfmt.toml  BUILD.md  Cargo.toml  IMPLEMENTATION.md  LICENSE  PUBLISHING.md  README.md  USAGE.md  barrel-loader-utils.cjs  barrel-loader-utils.d.cts  biome.json  build.rs  build.sh  clean.sh  clippy.toml  index.cjs  index.d.cts  package.json  pnpm-lock.yaml  rslib.config.ts  rstest.config.ts  setup.sh  test.cjs  tsconfig.json
.cargo/: config.toml
.cspell/: general.cspell.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
docs/: EXAMPLES.md  TROUBLESHOOTING.md  examples.js  types.ts
scripts/: bump-version.sh  check-version-sync.sh  copy-native.cjs
src/: barrel-loader-utils.ts  barrel-loader.test.ts  barrel-loader.ts  barrel-loader.types.ts  barrel-loader.utils.ts  cli_args.rs  index.ts  lib.rs  main.rs  napi_bindings.rs  types.rs  types.ts
src/barrel_loader/: mod.rs  processor.rs
src/parser/: named.rs
src/reconstruction/: mod.rs
src/rs_utils/: deduplication.rs  mod.rs  napi_bindings.rs  sorting.rs
src/rs_utils/barrel_loader/: file_check.rs  processor.rs
src/rs_utils/parser/: default.rs  export_builder.rs  line_parser.rs  mod.rs  namespace.rs
src/rs_utils/reconstruction/: grouping.rs  type_exports.rs  value_exports.rs
src/ts-utils/: dedupe.ts  native-addon.ts  parse.ts  reconstruct.ts  resolve-barrel.ts  resolve-utils.ts
src/utils/: dedupe.ts  native-addon.ts  parse.ts  resolve-utils.ts  sort.ts
test-package/: .npmrc  .pnpmrc  package.json  pnpm-lock.yaml  rslib.config.ts  tsconfig.json
test-package/src/: index.ts
test-package/src/folder1/: file.ts  file.types.ts  index.ts
test-package/src/folder2/: file.ts  file.types.ts  index.ts
tests/: barrel_loader_tests.rs  deduplication_tests.rs  parametrized_tests.rs  parser_tests.rs
