[package]
name = "barrel-loader"
version = "0.1.5"
edition = "2021"
description = "High-performance barrel file loader for webpack/rspack using Rust NAPI bindings"
license = "ISC"
authors = ["Arpit Arya <arpitarya@users.noreply.github.com>"]
repository = "https://github.com/arpitarya/barrel-loader"
keywords = ["barrel", "loader", "webpack", "rspack", "rust"]
autobins = false

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = { version = "2.16", features = ["serde-json"] }
napi-derive = "2.16"

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
rstest = "0.23"

[lib]
name = "barrel_loader"
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Pedantic lints for better code quality
pedantic = { level = "warn", priority = -1 }
# Nursery lints (experimental but useful)
nursery = { level = "warn", priority = -1 }
# Performance lints
perf = { level = "warn", priority = -1 }

# Enforce maximum lines per function
too_many_lines = "warn"

# Allow some pedantic lints that are too strict
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
