[package]
name = "apec1-barrel-loader"
version = "1.0.0"
edition = "2021"
description = "High-performance barrel file loader for webpack/rspack using Rust NAPI bindings"
license = "ISC"
authors = ["Arpit Arya <arpitarya@users.noreply.github.com>"]
repository = "https://github.com/arpitarya/barrel-loader"
keywords = ["barrel", "loader", "webpack", "rspack", "rust"]
autobins = false

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
napi = { version = "3.8.3", features = ["serde-json"] }
napi-derive = "3.5.2"

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
rstest = "0.23"

[lib]
name = "barrel_loader"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
